# signposter

./: .env.example  .gitignore  BRANCH.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: agents.example.yaml  labels.example.yaml  planner.example-plan.json  planner.example-seed-manifest.json  repos.example.yaml  routing.example.yaml  scheduler.example.yaml
docs/: architecture-debt.md  architecture.md  artifacts-reference.md  labels.md  operator-lifecycle-runbook.md  operator-log-template.md  state-machine.md  troubleshooting.md  workflow.md
docs/audits/: h049-001-repository-command-surface-audit.md  h049-002-architecture-module-boundary-map.md  (+27 more)
scripts/: README.md  generate_h052_roadmap_from_github.py
tests/: __init__.py  test_artifact.py  test_artifact_safety.py  test_artifacts.py  test_automation_regression.py  test_backend_status.py  test_bug_ledger.py  test_claim.py  test_cleanup.py  test_cli.py  test_codex_cli_backend.py  test_codex_stage_contract.py  test_codex_subagent.py  test_comments.py  test_control_status.py  test_delegation.py  test_dependencies.py  test_dispatch.py  test_doctor.py  test_execution_backend.py  test_full_lifecycle_happy_path.py  test_gate.py  test_git_utils.py  test_handoff.py  test_integration.py  test_issue_factory.py  test_issue_manifest.py  test_labels.py  test_lifecycle.py  test_merge.py  test_mutation_boundaries.py  test_openclaw_diagnostics.py  test_openclaw_preflight.py  test_openclaw_runtime.py  test_orchestrator.py  test_planner.py  test_pr.py  test_pr_linkage.py  test_report.py  test_review.py  (+14 more)
(+59 files in other folders)
