[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signposter"
version = "0.1.0"
description = "Signposter - Project skeleton (orchestration logic not yet implemented)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Operator"}
]
dependencies = []

[project.scripts]
signposter = "signposter.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/your-org/signposter"
Repository = "https://github.com/your-org/signposter"

[tool.hatch.build.targets.wheel]
packages = ["src/signposter"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --strict-markers"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true
packages = ["src/signposter"]